src/components/Navigation.scss
#Navigation {
  position: sticky;
  border: unset;
  padding-top: 0.5em;
  background: linear-gradient(to top, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0.6) 80%);

  .container {
    max-width: 740px;

    a {
      text-decoration: unset;
    }

    li {
      display: flex;
      margin: 0 15px;

      a {
        color: $clr_black;
        font-size: 1.1em;
      }

      &.active {
        a {
          border-bottom: 3px double $clr_black;
          background-color: transparent;
        }
      }
    }

    .navbar-brand {
      font-size: 1em;
      h1 {
        margin: 0;
        font-weight: normal;
        font-size: 1.4em;
      }
    }

    .navbar-collapse {
      border-top: 2px solid transparent;
      border-bottom: 2px solid transparent;
      padding-bottom: 1em;

      @media screen and (max-width: 767px) {
        border-top: 2px solid $clr_black;
        border-bottom: 2px solid $clr_black;
      }
    }

    .navbar-toggle {
      border-color: transparent;
      background-color: transparent;
      padding-right: 0;
      position: relative;

      .icon-bar {
        border-radius: 0;
        width: 28px;
        background-color: $clr_black;
        transition: ease-in-out 0.2s;
        transform-origin: left center;
        & + .icon-bar {
          margin-top: 6px;
        }
      }

      &:not(.collapsed) {
        .icon-bar {
          width: 24px;
          margin-right: 2px;

          &:nth-child(2) {
            transform: rotate(45deg);
          }
          &:nth-child(3) {
            transform: translate(4.5px, 100%);
            width: 0;
            opacity: 0;
            transition: ease-in-out 0.1s;
          }
          &:nth-child(4) {
            transform: rotate(-45deg);
          }
        }
      }
    }
  }
}

